feat(members): Data export
